Created Search page complete

--- a/src/screens/LoginScreen/LoginScreen.module.css
+++ b/src/screens/LoginScreen/LoginScreen.module.css
@@ -1,30 +1,31 @@
-.verticalLineParent {
-
-  position: relative;
+/* LoginStyles.module.css */
+.root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  overflow: hidden;
 }
 
-.verticalLine {
-  content: '';
-  position: absolute;
-  top: 10%;
-  right: 46%;
-  transform: translateX(-50%);
-  width: 2px;
-  height: 80%;
-  background-color: rgba(0, 0, 0, 0.25);
+.loginBox {
+  padding: 20px;
+  background-color: #333;
+  color: white;
+  text-align: center;
 }
 
-.headerHight {
-
-  margin-top: var(--navbar-height);
+.submitButton {
+  background-color: orange;
+  margin-top: 20px;
+  color: white;
 }
 
-
-
-@media (max-width:1000px) {
-
-  .headerHight {
-
-    margin-top: 0;
-  }
+h2 {
+  margin-bottom: 20px;
 }
+.errorText{
+  color: red;
+  font-size: small;
+}
+/* Add more styles as needed */
