--- a/src/screens/LoginScreen/LoginScreen.module.css
+++ b/src/screens/LoginScreen/LoginScreen.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(45deg, #FE6B8B 30%, #FF8E53 90%);
+  background: linear-gradient(45deg, #9c27b0 30%, #c768d7 90%);
   overflow: hidden;
 }
 
